--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "google-translate-api": "^2.3.0",
     "multer": "^1.4.0",
     "node-xlsx": "^0.12.1",
-    "tunnel": "0.0.6"
+    "request": "^2.88.0",
+    "request-promise": "^4.2.2",
+    "tunnel": "0.0.6",
+    "xlsx": "^0.14.0"
   }
 }
